solved css overflow certificate

--- a/app/Sass/_compCertificate.scss
+++ b/app/Sass/_compCertificate.scss
@@ -19,11 +19,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     overflow-x: auto;
     .imgKnow {
       box-sizing: border-box;
-      width: 35vw;
+      // width: 35vw;
       .img {
         padding-left: 1vw;
         width: 15vw;
@@ -49,7 +49,6 @@
         object-fit: cover;
         height: auto;
         &:first-child {
-          border: 3px solid red;
           margin-left: 20px;
         }
         .img {
